--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,8 +20,7 @@
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints"
-        android:background="#FA8072"/>
+       android:background="@drawable/button_radius"/>
 
     <Button
         android:id="@+id/recordes"
@@ -32,10 +31,10 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="Recordes"
-        android:background="#FA8072"
+        android:background="@drawable/button_radius"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/jogar"
-        tools:ignore="MissingConstraints" />
+         />
 </android.support.constraint.ConstraintLayout>
