--- a/app/src/main/res/layout/activity_recordes.xml
+++ b/app/src/main/res/layout/activity_recordes.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.RecordesActivity">
+    android:id="@+id/layout"
+    tools:context=".Activity.RecordesActivity"
+    android:background="#fffd82">
 
 </android.support.constraint.ConstraintLayout>
