--- a/app/src/main/res/layout/activity_jogo.xml
+++ b/app/src/main/res/layout/activity_jogo.xml
@@ -4,17 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.JogoActivity"
     android:background="#fffd82"
-    >
+    tools:context=".Activity.JogoActivity">
 
 
     <Button
         android:id="@+id/buttonA"
         android:layout_width="40dp"
-        android:layout_height="34dp"
+        android:layout_height="36dp"
         android:layout_marginStart="204dp"
-        android:layout_marginTop="212dp"
+        android:layout_marginTop="188dp"
         android:clickable="true"
         android:onClick="getClick"
         android:text="A"
@@ -24,69 +23,68 @@
     <Button
         android:id="@+id/buttonB"
         android:layout_width="40dp"
-        android:layout_height="34dp"
+        android:layout_height="36dp"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="212dp"
-        android:text="B"
+        android:layout_marginTop="188dp"
         android:clickable="true"
         android:onClick="getClick"
+        android:text="B"
         app:layout_constraintStart_toEndOf="@+id/buttonA"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/buttonC"
         android:layout_width="40dp"
-        android:layout_height="34dp"
+        android:layout_height="36dp"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="212dp"
-        android:text="C"
+        android:layout_marginTop="188dp"
         android:clickable="true"
         android:onClick="getClick"
+        android:text="C"
         app:layout_constraintStart_toEndOf="@+id/buttonB"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/buttonD"
         android:layout_width="40dp"
-        android:layout_height="34dp"
+        android:layout_height="36dp"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="212dp"
-        android:text="D"
+        android:layout_marginTop="188dp"
         android:clickable="true"
         android:onClick="getClick"
+        android:text="D"
         app:layout_constraintStart_toEndOf="@+id/buttonC"
         app:layout_constraintTop_toTopOf="parent" />
-
 
 
     <Button
         android:id="@+id/buttonE"
         android:layout_width="40dp"
-        android:layout_height="34dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="212dp"
-        android:text="E"
+        android:layout_height="36dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="188dp"
         android:clickable="true"
         android:onClick="getClick"
+        android:text="E"
         app:layout_constraintStart_toEndOf="@+id/buttonD"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/buttonF"
         android:layout_width="40dp"
-        android:layout_height="34dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="212dp"
-        android:text="F"
+        android:layout_height="36dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="188dp"
         android:clickable="true"
         android:onClick="getClick"
+        android:text="F"
         app:layout_constraintStart_toEndOf="@+id/buttonE"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/buttonG"
         android:layout_width="40dp"
-        android:layout_height="34dp"
+        android:layout_height="36dp"
         android:layout_marginStart="204dp"
         android:clickable="true"
         android:onClick="getClick"
@@ -97,34 +95,34 @@
     <Button
         android:id="@+id/buttonH"
         android:layout_width="40dp"
-        android:layout_height="34dp"
+        android:layout_height="36dp"
         android:layout_marginStart="12dp"
-        android:text="H"
         android:clickable="true"
         android:onClick="getClick"
+        android:text="H"
         app:layout_constraintStart_toEndOf="@+id/buttonG"
         app:layout_constraintTop_toBottomOf="@+id/buttonB" />
 
     <Button
         android:id="@+id/buttonI"
         android:layout_width="40dp"
-        android:layout_height="34dp"
+        android:layout_height="36dp"
         android:layout_marginStart="12dp"
-        android:text="I"
         android:clickable="true"
         android:onClick="getClick"
+        android:text="I"
         app:layout_constraintStart_toEndOf="@+id/buttonH"
         app:layout_constraintTop_toBottomOf="@+id/buttonC" />
 
     <Button
         android:id="@+id/buttonJ"
         android:layout_width="40dp"
-        android:layout_height="34dp"
+        android:layout_height="36dp"
         android:layout_marginStart="12dp"
-        android:text="J"
         android:clickable="true"
         android:onClick="getClick"
-        android:padding="1dp"
+        android:padding="4dp"
+        android:text="J"
         app:layout_constraintStart_toEndOf="@+id/buttonI"
         app:layout_constraintTop_toBottomOf="@+id/buttonD" />
 
@@ -132,19 +130,19 @@
     <Button
         android:id="@+id/buttonK"
         android:layout_width="40dp"
-        android:layout_height="34dp"
-        android:layout_marginStart="12dp"
-        android:text="K"
+        android:layout_height="36dp"
+        android:layout_marginStart="8dp"
         android:clickable="true"
         android:onClick="getClick"
+        android:text="K"
         app:layout_constraintStart_toEndOf="@+id/buttonJ"
         app:layout_constraintTop_toBottomOf="@+id/buttonE" />
 
     <Button
         android:id="@+id/buttonL"
         android:layout_width="40dp"
-        android:layout_height="34dp"
-        android:layout_marginStart="12dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="8dp"
         android:clickable="true"
         android:onClick="getClick"
         android:text="L"
@@ -154,7 +152,7 @@
     <Button
         android:id="@+id/buttonM"
         android:layout_width="40dp"
-        android:layout_height="34dp"
+        android:layout_height="36dp"
         android:layout_marginStart="204dp"
         android:clickable="true"
         android:onClick="getClick"
@@ -166,65 +164,65 @@
     <Button
         android:id="@+id/buttonN"
         android:layout_width="40dp"
-        android:layout_height="34dp"
+        android:layout_height="36dp"
         android:layout_marginStart="12dp"
-        android:text="N"
         android:clickable="true"
         android:onClick="getClick"
+        android:text="N"
         app:layout_constraintStart_toEndOf="@+id/buttonM"
         app:layout_constraintTop_toBottomOf="@+id/buttonH" />
 
     <Button
         android:id="@+id/buttonO"
         android:layout_width="40dp"
-        android:layout_height="34dp"
+        android:layout_height="36dp"
         android:layout_marginStart="12dp"
-        android:padding="1dp"
-        android:text="O"
         android:clickable="true"
         android:onClick="getClick"
+        android:padding="1dp"
+        android:text="O"
         app:layout_constraintStart_toEndOf="@+id/buttonN"
         app:layout_constraintTop_toBottomOf="@+id/buttonI" />
 
     <Button
         android:id="@+id/buttonP"
         android:layout_width="40dp"
-        android:layout_height="34dp"
+        android:layout_height="36dp"
         android:layout_marginStart="12dp"
-        android:text="P"
         android:clickable="true"
         android:onClick="getClick"
+        android:text="P"
         app:layout_constraintStart_toEndOf="@+id/buttonO"
         app:layout_constraintTop_toBottomOf="@+id/buttonJ" />
 
     <Button
         android:id="@+id/buttonQ"
         android:layout_width="40dp"
-        android:layout_height="34dp"
-        android:layout_marginStart="12dp"
-        android:text="Q"
+        android:layout_height="36dp"
+        android:layout_marginStart="8dp"
         android:clickable="true"
         android:onClick="getClick"
         android:padding="1dp"
+        android:text="Q"
         app:layout_constraintStart_toEndOf="@+id/buttonP"
         app:layout_constraintTop_toBottomOf="@+id/buttonK" />
 
     <Button
         android:id="@+id/buttonR"
         android:layout_width="40dp"
-        android:layout_height="34dp"
-        android:layout_marginStart="12dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="8dp"
 
-        android:text="R"
         android:clickable="true"
         android:onClick="getClick"
+        android:text="R"
         app:layout_constraintStart_toEndOf="@+id/buttonQ"
         app:layout_constraintTop_toBottomOf="@+id/buttonL" />
 
     <Button
         android:id="@+id/buttonS"
         android:layout_width="40dp"
-        android:layout_height="34dp"
+        android:layout_height="36dp"
         android:layout_marginStart="204dp"
 
         android:clickable="true"
@@ -236,161 +234,180 @@
     <Button
         android:id="@+id/buttonT"
         android:layout_width="40dp"
-        android:layout_height="34dp"
+        android:layout_height="36dp"
         android:layout_marginStart="12dp"
-        android:text="T"
         android:clickable="true"
         android:onClick="getClick"
+        android:text="T"
         app:layout_constraintStart_toEndOf="@+id/buttonS"
         app:layout_constraintTop_toBottomOf="@+id/buttonN" />
 
     <Button
         android:id="@+id/buttonU"
         android:layout_width="40dp"
-        android:layout_height="34dp"
+        android:layout_height="36dp"
         android:layout_marginStart="12dp"
 
-        android:text="U"
         android:clickable="true"
         android:onClick="getClick"
+        android:text="U"
         app:layout_constraintStart_toEndOf="@+id/buttonT"
         app:layout_constraintTop_toBottomOf="@+id/buttonO" />
 
     <Button
         android:id="@+id/buttonV"
         android:layout_width="40dp"
-        android:layout_height="34dp"
+        android:layout_height="36dp"
         android:layout_marginStart="12dp"
 
-        android:text="V"
         android:clickable="true"
         android:onClick="getClick"
+        android:text="V"
         app:layout_constraintStart_toEndOf="@+id/buttonU"
         app:layout_constraintTop_toBottomOf="@+id/buttonP" />
 
     <Button
         android:id="@+id/buttonW"
         android:layout_width="40dp"
-        android:layout_height="34dp"
-        android:layout_marginStart="12dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="8dp"
 
-        android:text="W"
         android:clickable="true"
         android:onClick="getClick"
+        android:text="W"
         app:layout_constraintStart_toEndOf="@+id/buttonV"
         app:layout_constraintTop_toBottomOf="@+id/buttonQ" />
 
     <Button
         android:id="@+id/buttonX"
         android:layout_width="40dp"
-        android:layout_height="34dp"
-        android:layout_marginStart="12dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="8dp"
 
-        android:text="X"
         android:clickable="true"
         android:onClick="getClick"
+        android:text="X"
         app:layout_constraintStart_toEndOf="@+id/buttonW"
         app:layout_constraintTop_toBottomOf="@+id/buttonR" />
 
     <Button
         android:id="@+id/buttonY"
         android:layout_width="40dp"
-        android:layout_height="34dp"
+        android:layout_height="36dp"
         android:layout_marginStart="308dp"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="4dp"
+        android:layout_marginBottom="8dp"
         android:clickable="true"
         android:onClick="getClick"
         android:text="Y"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonU"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/buttonZ"
         android:layout_width="40dp"
-        android:layout_height="34dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginBottom="4dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:clickable="true"
         android:onClick="getClick"
         android:text="Z"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/buttonY" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.017"
+        app:layout_constraintStart_toEndOf="@+id/buttonY"
+        app:layout_constraintTop_toBottomOf="@+id/buttonV" />
 
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="667dp"
-        android:layout_height="200dp"
+        android:layout_height="171dp"
         android:layout_marginStart="8dp"
-        card_view:cardCornerRadius="25dp"
-        card_view:cardBackgroundColor="#FA8072"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/buttonC"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" >
+        app:layout_constraintTop_toTopOf="parent"
+        card_view:cardBackgroundColor="#FA8072"
+        card_view:cardCornerRadius="25dp"
+        card_view:layout_constraintHorizontal_bias="1.0"
+        card_view:layout_constraintVertical_bias="1.0">
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="120dp"
-            android:layout_height="45dp"
-            android:text="Palavra: "
-            android:layout_marginLeft="85dp"
-            android:layout_marginTop="140dp"
-            android:textSize="32sp"
-            />
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/palavra"
-            android:layout_width="200dp"
-            android:layout_height="45dp"
-            android:text=""
-            android:layout_marginLeft="228dp"
-            android:layout_marginTop="140dp"
-            android:textSize="32sp"
-            />
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="146dp"
+                android:layout_height="45dp"
+                android:layout_marginStart="40dp"
+                android:text="Palavra: "
+                android:textSize="32sp"
+                card_view:layout_constraintStart_toStartOf="parent"
+                card_view:layout_constraintTop_toBottomOf="@+id/imagemPalavra" />
 
-        <Button
-            android:id="@+id/botaoConfirmar"
-            android:layout_width="wrap_content"
-            android:layout_height="34dp"
-            android:layout_marginLeft="530dp"
-            android:layout_marginTop="115dp"
-            android:background="#60d394"
-            android:text="Confimar"
+            <TextView
+                android:id="@+id/palavra"
+                android:layout_width="200dp"
+                android:layout_height="45dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="112dp"
+                android:text=""
+                android:textSize="32sp"
+                card_view:layout_constraintStart_toEndOf="@+id/textView"
+                card_view:layout_constraintTop_toTopOf="parent" />
 
-            />
+            <Button
+                android:id="@+id/botaoConfirmar"
+                android:layout_width="wrap_content"
+                android:layout_height="36dp"
+                android:layout_marginEnd="32dp"
+                android:layout_marginBottom="8dp"
 
-        <Button
-            android:id="@+id/limpar"
-            android:layout_width="wrap_content"
-            android:layout_height="34dp"
-            android:layout_marginLeft="530dp"
-            android:layout_marginTop="155dp"
-            android:background="#ffc857"
-            android:text="Limpar" />
+                android:background="#60d394"
+                android:text="Confimar"
+                card_view:layout_constraintBottom_toTopOf="@+id/limpar"
+                card_view:layout_constraintEnd_toEndOf="parent" />
 
-        <ImageView
-            android:id="@+id/imagemPalavra"
-            android:layout_width="180dp"
-            android:layout_height="130dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="35dp"
-            android:src="@android:color/transparent" />
+            <Button
+                android:id="@+id/limpar"
+                android:layout_width="wrap_content"
+                android:layout_height="36dp"
+                android:layout_marginEnd="32dp"
+                android:layout_marginBottom="8dp"
+                android:background="#ffc857"
+                android:text="Limpar"
+                card_view:layout_constraintBottom_toBottomOf="parent"
+                card_view:layout_constraintEnd_toEndOf="parent" />
 
-        <ImageView
-            android:id="@+id/botaoPlay"
-            android:layout_width="60dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="50dp"
-            android:layout_marginLeft="547dp"
-            app:srcCompat="@android:drawable/ic_lock_silent_mode_off" />
+            <ImageView
+                android:id="@+id/imagemPalavra"
+                android:layout_width="160dp"
+                android:layout_height="110dp"
+                android:layout_marginStart="36dp"
+                android:layout_marginTop="4dp"
+                android:src="@android:color/transparent"
+                card_view:layout_constraintStart_toStartOf="parent"
+                card_view:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/botaoPlay"
+                android:layout_width="60dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="48dp"
+                app:srcCompat="@android:drawable/ic_lock_silent_mode_off"
+                card_view:layout_constraintEnd_toEndOf="parent"
+                card_view:layout_constraintTop_toTopOf="parent" />
             <!--app:srcCompat="@android:drawable/ic_media_play" />-->
 
-
+        </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 
     <ImageView
@@ -408,10 +425,7 @@
         android:layout_width="49dp"
         android:layout_height="45dp"
         android:layout_marginStart="112dp"
-        android:layout_marginTop="220dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.111"
+        android:layout_marginTop="212dp"
         app:layout_constraintStart_toEndOf="@+id/buttonF"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/coracao_icon" />
