--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
 
 
     <Button
-        android:id="@+id/jogar"
+        android:id="@+id/botao_jogar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -23,7 +23,7 @@
        android:background="@drawable/button_radius"/>
 
     <Button
-        android:id="@+id/recordes"
+        android:id="@+id/botao_recordes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -35,6 +35,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/jogar"
+        app:layout_constraintTop_toBottomOf="@+id/botao_jogar"
          />
 </android.support.constraint.ConstraintLayout>
