--- a/app/src/main/res/layout/activity_registrar.xml
+++ b/app/src/main/res/layout/activity_registrar.xml
@@ -13,7 +13,7 @@
         android:layout_width="270dp"
         android:layout_height="54dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="152dp"
+        android:layout_marginTop="128dp"
         android:text="Digite seu nome: "
         android:textSize="32sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,8 +23,8 @@
         android:id="@+id/nome"
         android:layout_width="294dp"
         android:layout_height="53dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="152dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="128dp"
         android:text=""
         android:textSize="32sp"
         app:layout_constraintStart_toEndOf="@+id/jo"
@@ -34,28 +34,337 @@
         android:id="@+id/salvar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="312dp"
+        android:layout_marginStart="564dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
+        android:background="@drawable/button_radius"
         android:text="Salvar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/jo"
-        app:layout_constraintVertical_bias="0.568"
-        android:background="@drawable/button_radius"/>
+        app:layout_constraintVertical_bias="0.446" />
 
     <TextView
         android:id="@+id/mensagemFinal"
         android:layout_width="660dp"
-        android:layout_height="54dp"
+        android:layout_height="91dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
         android:text=""
         android:textSize="32sp"
-        app:layout_constraintBottom_toTopOf="@+id/jo"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.428"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+
+    <Button
+        android:id="@+id/buttonA"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="204dp"
+        android:layout_marginTop="212dp"
+        android:clickable="true"
+        android:onClick="getClick"
+        android:text="A"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/buttonB"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="212dp"
+        android:text="B"
+        android:clickable="true"
+        android:onClick="getClick"
+        app:layout_constraintStart_toEndOf="@+id/buttonA"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/buttonC"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="212dp"
+        android:text="C"
+        android:clickable="true"
+        android:onClick="getClick"
+        app:layout_constraintStart_toEndOf="@+id/buttonB"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/buttonD"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="212dp"
+        android:text="D"
+        android:clickable="true"
+        android:onClick="getClick"
+        app:layout_constraintStart_toEndOf="@+id/buttonC"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+
+    <Button
+        android:id="@+id/buttonE"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="212dp"
+        android:text="E"
+        android:clickable="true"
+        android:onClick="getClick"
+        app:layout_constraintStart_toEndOf="@+id/buttonD"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/buttonF"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="212dp"
+        android:text="F"
+        android:clickable="true"
+        android:onClick="getClick"
+        app:layout_constraintStart_toEndOf="@+id/buttonE"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/buttonG"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="204dp"
+        android:clickable="true"
+        android:onClick="getClick"
+        android:text="G"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonA" />
+
+    <Button
+        android:id="@+id/buttonH"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="12dp"
+        android:text="H"
+        android:clickable="true"
+        android:onClick="getClick"
+        app:layout_constraintStart_toEndOf="@+id/buttonG"
+        app:layout_constraintTop_toBottomOf="@+id/buttonB" />
+
+    <Button
+        android:id="@+id/buttonI"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="12dp"
+        android:text="I"
+        android:clickable="true"
+        android:onClick="getClick"
+        app:layout_constraintStart_toEndOf="@+id/buttonH"
+        app:layout_constraintTop_toBottomOf="@+id/buttonC" />
+
+    <Button
+        android:id="@+id/buttonJ"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="12dp"
+        android:text="J"
+        android:clickable="true"
+        android:onClick="getClick"
+        android:padding="4dp"
+        app:layout_constraintStart_toEndOf="@+id/buttonI"
+        app:layout_constraintTop_toBottomOf="@+id/buttonD" />
+
+
+    <Button
+        android:id="@+id/buttonK"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="12dp"
+        android:text="K"
+        android:clickable="true"
+        android:onClick="getClick"
+        app:layout_constraintStart_toEndOf="@+id/buttonJ"
+        app:layout_constraintTop_toBottomOf="@+id/buttonE" />
+
+    <Button
+        android:id="@+id/buttonL"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="12dp"
+        android:clickable="true"
+        android:onClick="getClick"
+        android:text="L"
+        app:layout_constraintStart_toEndOf="@+id/buttonK"
+        app:layout_constraintTop_toBottomOf="@+id/buttonF" />
+
+    <Button
+        android:id="@+id/buttonM"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="204dp"
+        android:clickable="true"
+        android:onClick="getClick"
+        android:text="M"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonG" />
+
+
+    <Button
+        android:id="@+id/buttonN"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="12dp"
+        android:text="N"
+        android:clickable="true"
+        android:onClick="getClick"
+        app:layout_constraintStart_toEndOf="@+id/buttonM"
+        app:layout_constraintTop_toBottomOf="@+id/buttonH" />
+
+    <Button
+        android:id="@+id/buttonO"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="12dp"
+        android:padding="1dp"
+        android:text="O"
+        android:clickable="true"
+        android:onClick="getClick"
+        app:layout_constraintStart_toEndOf="@+id/buttonN"
+        app:layout_constraintTop_toBottomOf="@+id/buttonI" />
+
+    <Button
+        android:id="@+id/buttonP"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="12dp"
+        android:text="P"
+        android:clickable="true"
+        android:onClick="getClick"
+        app:layout_constraintStart_toEndOf="@+id/buttonO"
+        app:layout_constraintTop_toBottomOf="@+id/buttonJ" />
+
+    <Button
+        android:id="@+id/buttonQ"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="12dp"
+        android:text="Q"
+        android:clickable="true"
+        android:onClick="getClick"
+        android:padding="1dp"
+        app:layout_constraintStart_toEndOf="@+id/buttonP"
+        app:layout_constraintTop_toBottomOf="@+id/buttonK" />
+
+    <Button
+        android:id="@+id/buttonR"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="12dp"
+
+        android:text="R"
+        android:clickable="true"
+        android:onClick="getClick"
+        app:layout_constraintStart_toEndOf="@+id/buttonQ"
+        app:layout_constraintTop_toBottomOf="@+id/buttonL" />
+
+    <Button
+        android:id="@+id/buttonS"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="204dp"
+
+        android:clickable="true"
+        android:onClick="getClick"
+        android:text="S"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonM" />
+
+    <Button
+        android:id="@+id/buttonT"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="12dp"
+        android:text="T"
+        android:clickable="true"
+        android:onClick="getClick"
+        app:layout_constraintStart_toEndOf="@+id/buttonS"
+        app:layout_constraintTop_toBottomOf="@+id/buttonN" />
+
+    <Button
+        android:id="@+id/buttonU"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="12dp"
+
+        android:text="U"
+        android:clickable="true"
+        android:onClick="getClick"
+        app:layout_constraintStart_toEndOf="@+id/buttonT"
+        app:layout_constraintTop_toBottomOf="@+id/buttonO" />
+
+    <Button
+        android:id="@+id/buttonV"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="12dp"
+
+        android:text="V"
+        android:clickable="true"
+        android:onClick="getClick"
+        app:layout_constraintStart_toEndOf="@+id/buttonU"
+        app:layout_constraintTop_toBottomOf="@+id/buttonP" />
+
+    <Button
+        android:id="@+id/buttonW"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="12dp"
+
+        android:text="W"
+        android:clickable="true"
+        android:onClick="getClick"
+        app:layout_constraintStart_toEndOf="@+id/buttonV"
+        app:layout_constraintTop_toBottomOf="@+id/buttonQ" />
+
+    <Button
+        android:id="@+id/buttonX"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="12dp"
+
+        android:text="X"
+        android:clickable="true"
+        android:onClick="getClick"
+        app:layout_constraintStart_toEndOf="@+id/buttonW"
+        app:layout_constraintTop_toBottomOf="@+id/buttonR" />
+
+    <Button
+        android:id="@+id/buttonY"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="308dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginBottom="4dp"
+        android:clickable="true"
+        android:onClick="getClick"
+        android:text="Y"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonU"
+        app:layout_constraintVertical_bias="0.727" />
+
+    <Button
+        android:id="@+id/buttonZ"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="12dp"
+        android:clickable="true"
+        android:onClick="getClick"
+        android:text="Z"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/buttonY" />
 </android.support.constraint.ConstraintLayout>
