--- a/app/src/main/res/layout/activity_jogo.xml
+++ b/app/src/main/res/layout/activity_jogo.xml
@@ -8,326 +8,39 @@
     tools:context=".Activity.JogoActivity">
 
 
-    <Button
-        android:id="@+id/buttonA"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="204dp"
-        android:layout_marginTop="188dp"
-        android:clickable="true"
-        android:onClick="getClick"
-        android:text="A"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/buttonB"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="188dp"
-        android:clickable="true"
-        android:onClick="getClick"
-        android:text="B"
-        app:layout_constraintStart_toEndOf="@+id/buttonA"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/buttonC"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="188dp"
-        android:clickable="true"
-        android:onClick="getClick"
-        android:text="C"
-        app:layout_constraintStart_toEndOf="@+id/buttonB"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/buttonD"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="188dp"
-        android:clickable="true"
-        android:onClick="getClick"
-        android:text="D"
-        app:layout_constraintStart_toEndOf="@+id/buttonC"
-        app:layout_constraintTop_toTopOf="parent" />
-
-
-    <Button
-        android:id="@+id/buttonE"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="188dp"
-        android:clickable="true"
-        android:onClick="getClick"
-        android:text="E"
-        app:layout_constraintStart_toEndOf="@+id/buttonD"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/buttonF"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="188dp"
-        android:clickable="true"
-        android:onClick="getClick"
-        android:text="F"
-        app:layout_constraintStart_toEndOf="@+id/buttonE"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/buttonG"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="204dp"
-        android:clickable="true"
-        android:onClick="getClick"
-        android:text="G"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonA" />
-
-    <Button
-        android:id="@+id/buttonH"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="12dp"
-        android:clickable="true"
-        android:onClick="getClick"
-        android:text="H"
-        app:layout_constraintStart_toEndOf="@+id/buttonG"
-        app:layout_constraintTop_toBottomOf="@+id/buttonB" />
-
-    <Button
-        android:id="@+id/buttonI"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="12dp"
-        android:clickable="true"
-        android:onClick="getClick"
-        android:text="I"
-        app:layout_constraintStart_toEndOf="@+id/buttonH"
-        app:layout_constraintTop_toBottomOf="@+id/buttonC" />
-
-    <Button
-        android:id="@+id/buttonJ"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="12dp"
-        android:clickable="true"
-        android:onClick="getClick"
-        android:padding="4dp"
-        android:text="J"
-        app:layout_constraintStart_toEndOf="@+id/buttonI"
-        app:layout_constraintTop_toBottomOf="@+id/buttonD" />
-
-
-    <Button
-        android:id="@+id/buttonK"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="8dp"
-        android:clickable="true"
-        android:onClick="getClick"
-        android:text="K"
-        app:layout_constraintStart_toEndOf="@+id/buttonJ"
-        app:layout_constraintTop_toBottomOf="@+id/buttonE" />
-
-    <Button
-        android:id="@+id/buttonL"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="8dp"
-        android:clickable="true"
-        android:onClick="getClick"
-        android:text="L"
-        app:layout_constraintStart_toEndOf="@+id/buttonK"
-        app:layout_constraintTop_toBottomOf="@+id/buttonF" />
-
-    <Button
-        android:id="@+id/buttonM"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="204dp"
-        android:clickable="true"
-        android:onClick="getClick"
-        android:text="M"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonG" />
-
-
-    <Button
-        android:id="@+id/buttonN"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="12dp"
-        android:clickable="true"
-        android:onClick="getClick"
-        android:text="N"
-        app:layout_constraintStart_toEndOf="@+id/buttonM"
-        app:layout_constraintTop_toBottomOf="@+id/buttonH" />
-
-    <Button
-        android:id="@+id/buttonO"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="12dp"
-        android:clickable="true"
-        android:onClick="getClick"
-        android:padding="1dp"
-        android:text="O"
-        app:layout_constraintStart_toEndOf="@+id/buttonN"
-        app:layout_constraintTop_toBottomOf="@+id/buttonI" />
-
-    <Button
-        android:id="@+id/buttonP"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="12dp"
-        android:clickable="true"
-        android:onClick="getClick"
-        android:text="P"
-        app:layout_constraintStart_toEndOf="@+id/buttonO"
-        app:layout_constraintTop_toBottomOf="@+id/buttonJ" />
-
-    <Button
-        android:id="@+id/buttonQ"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="8dp"
-        android:clickable="true"
-        android:onClick="getClick"
-        android:padding="1dp"
-        android:text="Q"
-        app:layout_constraintStart_toEndOf="@+id/buttonP"
-        app:layout_constraintTop_toBottomOf="@+id/buttonK" />
-
-    <Button
-        android:id="@+id/buttonR"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="8dp"
-
-        android:clickable="true"
-        android:onClick="getClick"
-        android:text="R"
-        app:layout_constraintStart_toEndOf="@+id/buttonQ"
-        app:layout_constraintTop_toBottomOf="@+id/buttonL" />
-
-    <Button
-        android:id="@+id/buttonS"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="204dp"
-
-        android:clickable="true"
-        android:onClick="getClick"
-        android:text="S"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonM" />
-
-    <Button
-        android:id="@+id/buttonT"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="12dp"
-        android:clickable="true"
-        android:onClick="getClick"
-        android:text="T"
-        app:layout_constraintStart_toEndOf="@+id/buttonS"
-        app:layout_constraintTop_toBottomOf="@+id/buttonN" />
-
-    <Button
-        android:id="@+id/buttonU"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="12dp"
-
-        android:clickable="true"
-        android:onClick="getClick"
-        android:text="U"
-        app:layout_constraintStart_toEndOf="@+id/buttonT"
-        app:layout_constraintTop_toBottomOf="@+id/buttonO" />
-
-    <Button
-        android:id="@+id/buttonV"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="12dp"
-
-        android:clickable="true"
-        android:onClick="getClick"
-        android:text="V"
-        app:layout_constraintStart_toEndOf="@+id/buttonU"
-        app:layout_constraintTop_toBottomOf="@+id/buttonP" />
-
-    <Button
-        android:id="@+id/buttonW"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="8dp"
-
-        android:clickable="true"
-        android:onClick="getClick"
-        android:text="W"
-        app:layout_constraintStart_toEndOf="@+id/buttonV"
-        app:layout_constraintTop_toBottomOf="@+id/buttonQ" />
-
-    <Button
-        android:id="@+id/buttonX"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="8dp"
-
-        android:clickable="true"
-        android:onClick="getClick"
-        android:text="X"
-        app:layout_constraintStart_toEndOf="@+id/buttonW"
-        app:layout_constraintTop_toBottomOf="@+id/buttonR" />
-
-    <Button
-        android:id="@+id/buttonY"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="308dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:clickable="true"
-        android:onClick="getClick"
-        android:text="Y"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonU"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <Button
-        android:id="@+id/buttonZ"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
+    <androidx.appcompat.widget.ContentFrameLayout
+        android:layout_width="504dp"
+        android:layout_height="203dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:clickable="true"
-        android:onClick="getClick"
-        android:text="Z"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.015"
-        app:layout_constraintStart_toEndOf="@+id/buttonY"
-        app:layout_constraintTop_toBottomOf="@+id/buttonV"
-        app:layout_constraintVertical_bias="0.0" />
+        android:id="@+id/teclado_jogo"
+        app:layout_constraintEnd_toStartOf="@+id/vida3"
+        app:layout_constraintHorizontal_bias="0.118"
+        app:layout_constraintStart_toEndOf="@+id/botao_voltar"
+        app:layout_constraintTop_toBottomOf="@+id/cardView">
+
+        <fragment
+            android:name="com.palavras.unicap.palavrinhas.TecladoAlfabeticoFragment"
+            android:layout_width="569dp"
+            android:layout_height="203dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cardView"
+            app:layout_constraintVertical_bias="1.0"
+            tools:layout="@layout/fragment_teclado"></fragment>
+    </androidx.appcompat.widget.ContentFrameLayout>
+
 
     <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/cardView"
         android:layout_width="667dp"
         android:layout_height="171dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/buttonC"
@@ -336,7 +49,6 @@
         app:layout_constraintTop_toTopOf="parent"
         card_view:cardBackgroundColor="#FA8072"
         card_view:cardCornerRadius="25dp"
-        card_view:layout_constraintHorizontal_bias="0.166"
         card_view:layout_constraintVertical_bias="0.0">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -413,10 +125,10 @@
 
     <ImageView
         android:id="@+id/botao_voltar"
-        android:layout_width="77dp"
-        android:layout_height="86dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginBottom="24dp"
+        android:layout_width="62dp"
+        android:layout_height="65dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="60dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@android:drawable/ic_menu_revert" />
@@ -425,9 +137,9 @@
         android:id="@+id/vida1"
         android:layout_width="49dp"
         android:layout_height="45dp"
-        android:layout_marginStart="112dp"
-        android:layout_marginTop="212dp"
-        app:layout_constraintStart_toEndOf="@+id/buttonF"
+        android:layout_marginTop="192dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/coracao_icon" />
 
@@ -435,9 +147,8 @@
         android:id="@+id/vida2"
         android:layout_width="49dp"
         android:layout_height="45dp"
-        android:layout_marginStart="112dp"
-        android:layout_marginTop="4dp"
-        app:layout_constraintStart_toEndOf="@+id/buttonX"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/vida3"
         app:srcCompat="@drawable/coracao_icon" />
 
@@ -445,11 +156,21 @@
         android:id="@+id/vida3"
         android:layout_width="49dp"
         android:layout_height="45dp"
-        android:layout_marginStart="112dp"
-        android:layout_marginTop="4dp"
-        app:layout_constraintStart_toEndOf="@+id/buttonR"
-        app:layout_constraintTop_toBottomOf="@+id/vida1"
+        android:layout_marginTop="56dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView"
         app:srcCompat="@drawable/coracao_icon" />
+
+    <Switch
+        android:id="@+id/switch_teclado"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="8dp"
+        android:text="Teclado"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/vida2" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
