--- a/app/src/main/res/layout/activity_registrar.xml
+++ b/app/src/main/res/layout/activity_registrar.xml
@@ -60,7 +60,7 @@
 
     <fragment
         android:id="@+id/teclado"
-        android:name="com.palavras.unicap.palavrinhas.TecladoAlfabeticoFragment"
+        android:name="com.palavras.unicap.palavrinhas.Fragment.TecladoAlfabeticoFragment"
         android:layout_width="479dp"
         android:layout_height="203dp"
         android:layout_marginEnd="52dp"
