--- a/app/src/main/res/layout/fragment_teclado_vogal.xml
+++ b/app/src/main/res/layout/fragment_teclado_vogal.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="465dp"
     android:layout_height="175dp"
-    tools:context=".TecladoVogalFragment"
+    tools:context=".Fragment.TecladoVogalFragment"
     android:background="#fffd82">
 
     <Button
