--- a/app/src/main/res/layout/fragment_jogo.xml
+++ b/app/src/main/res/layout/fragment_jogo.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="600dp"
     android:layout_height="185dp"
-    tools:context=".Fragment.JogoFragment"
+    tools:context=".fragment.JogoFragment"
     >
 
     <androidx.cardview.widget.CardView
@@ -25,7 +25,7 @@
             android:layout_height="175dp">
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/textViewPalavra"
                 android:layout_width="146dp"
                 android:layout_height="45dp"
                 android:layout_marginStart="40dp"
@@ -35,14 +35,14 @@
                 app:layout_constraintTop_toBottomOf="@+id/imagemPalavra" />
 
             <TextView
-                android:id="@+id/palavra"
+                android:id="@+id/palavra_escrita"
                 android:layout_width="200dp"
                 android:layout_height="45dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="112dp"
                 android:text=""
                 android:textSize="32sp"
-                app:layout_constraintStart_toEndOf="@+id/textView"
+                app:layout_constraintStart_toEndOf="@+id/textViewPalavra"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Button
